# spendpilot-services

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: documents-build-and-deploy-dev.yml  documents-docker-publish.yml  documents-promote-prod.yml  documents-promote-staging.yml  email-function-deploy.yml  finance-build-and-deploy-dev.yml  finance-docker-publish.yml  finance-promote-prod.yml  finance-promote-staging.yml  identity-build-and-deploy-dev.yml  identity-docker-publish.yml  identity-promote-prod.yml  identity-promote-staging.yml  pr-validation.yml
app/: app_factory.py  main.py
app/api/: __init__.py
app/core/: azure_identity.py  config.py  rbac.py  security.py
app/db/: session.py
app/models/: __init__.py
app/schemas/: ai.py  auth.py  common.py  documents.py  finance.py
app/service_apps/: __init__.py  identity.py
app/services/: ai_agent_service.py  ai_chat_service.py  ai_foundry_service.py  ai_knowledge_base.py  ai_tools.py  audit_service.py  document_service.py  email_queue.py  finance_service.py  policy_service.py  storage_service.py  user_service.py
functions/email_sender/: email_templates.py  (+5 more)
services/: README.md  __init__.py
tests/: alembic-validation.db  conftest.py  test-app.db  test_ai_chat.py  test_ai_tools.py  test_auth_dev.py  test_auth_entra_config.py  test_auth_personal_platform_admin.py  test_auth_tenant_bootstrap.py  test_departments_and_roles.py  test_documents.py  test_email_notifications.py  test_finance.py  test_health.py
(+21 files in other folders)
