[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "business-ai-backend"
version = "1.0.0"
description = "Shared backend codebase for the Spend Control finance platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "azure-ai-documentintelligence>=1.0.2",
  "azure-servicebus>=7.13.0",
  "azure-identity>=1.17.1",
  "azure-storage-blob>=12.22.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.35.10",
  "psycopg[binary]>=3.2.1",
  "PyJWT[crypto]>=2.9.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
  "email-validator>=2.2.0"
]

[project.optional-dependencies]
dev = [
  "azure-communication-email>=1.0.0",
  "azure-functions>=1.21.3",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.2"
]

[tool.setuptools.packages.find]
where = ["."]
